--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@ellementul/uee-timeticker",
-  "version": "1.5.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "node node_modules/jest/bin/jest.js"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -16,10 +17,11 @@
     "url": "https://github.com/ellementul/UEETimeTicker/issues"
   },
   "homepage": "https://github.com/ellementul/UEETimeTicker#readme",
-  "devDependencies": {
-    "jest": "^29.3.1"
-  },
   "dependencies": {
-    "@ellementul/uee-core": "^1.1.2"
+    "@ellementul/uee-core": "^2.0.0"
+  },
+  "devDependencies": {
+    "ava": "^5.3.1",
+    "sinon": "^16.1.0"
   }
 }
